[gd_scene load_steps=4 format=3 uid="uid://ces8862dggcmw"]

[ext_resource type="Script" path="res://Scripts/Control_panel.gd" id="1_c71k3"]
[ext_resource type="FontFile" uid="uid://dg8chn882jxi0" path="res://Fonts/Lato/Lato-Black.ttf" id="2_cr366"]

[sub_resource type="LabelSettings" id="LabelSettings_hdg5w"]
font = ExtResource("2_cr366")

[node name="ControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -899.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c71k3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 649.0
color = Color(0.0745098, 0.0745098, 0.0745098, 1)

[node name="Number_of_blocks_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 312.0
offset_right = 233.125
offset_bottom = 343.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "10"
alignment = 1

[node name="Block_max_height_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 263.0
offset_right = 235.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "1"
alignment = 1

[node name="Block_min_height_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 263.0
offset_right = 83.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "0.1"
alignment = 1

[node name="Block_max_depth_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 231.0
offset_right = 235.0
offset_bottom = 261.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "1"
alignment = 1

[node name="Block_min_depth_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 231.0
offset_right = 83.0
offset_bottom = 261.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "0.1"
alignment = 1

[node name="Block_max_width_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 199.0
offset_right = 235.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "1"
alignment = 1

[node name="Block_min_width_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 199.0
offset_right = 83.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "0.1"
alignment = 1

[node name="Container_depth_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 127.0
offset_right = 194.125
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "1"
alignment = 1

[node name="Container_width_line_edit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 87.0
offset_right = 194.125
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("2_cr366")
placeholder_text = "1"
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 13.0
offset_right = 201.0
offset_bottom = 36.0
text = "Container settings:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 131.0
offset_right = 112.0
offset_bottom = 154.0
text = "Depth:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 93.0
offset_right = 113.0
offset_bottom = 116.0
text = "Width:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 170.0
offset_right = 188.0
offset_bottom = 193.0
text = "Block settings:"
label_settings = SubResource("LabelSettings_hdg5w")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 203.0
offset_right = 160.0
offset_bottom = 226.0
text = "< width <"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 236.0
offset_right = 161.0
offset_bottom = 259.0
text = "< depth <"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 267.0
offset_right = 163.0
offset_bottom = 290.0
text = "< height <"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 315.0
offset_right = 159.0
offset_bottom = 338.0
text = "Number of blocks:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Generate_blocks_button" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 351.0
offset_right = 193.0
offset_bottom = 386.0
theme_override_fonts/font = ExtResource("2_cr366")
text = "Generate blocks"

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 402.0
offset_right = 198.0
offset_bottom = 425.0
text = "Algorithm settings:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label10" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 432.0
offset_right = 133.0
offset_bottom = 455.0
text = "Brute force:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Label11" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 467.0
offset_right = 107.0
offset_bottom = 490.0
text = "Genetic:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Brute_force_algorithm_check_button" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 432.0
offset_right = 199.0
offset_bottom = 456.0

[node name="Genetic_algorithm_check_button" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 467.0
offset_right = 199.0
offset_bottom = 491.0
button_pressed = true

[node name="Animation_check_button" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 524.0
offset_right = 199.0
offset_bottom = 548.0
button_pressed = true

[node name="Label12" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 524.0
offset_right = 135.0
offset_bottom = 547.0
text = "Animations:"
label_settings = SubResource("LabelSettings_hdg5w")

[node name="Calculate_best_block_order_button" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 565.0
offset_right = 221.0
offset_bottom = 632.0
theme_override_fonts/font = ExtResource("2_cr366")
text = "Calculate"

[node name="a_2D_button" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 50.0
offset_right = 110.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_cr366")
text = "2D
"

[node name="a_3D_button" type="Button" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 50.0
offset_right = 219.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_cr366")
text = "3D"

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(26, 215)
points = PackedVector2Array(41, -37, -18, -37, -18, 183, 211, 183, 211, -37, 155, -37)
width = 1.0

[node name="Line2D4" type="Line2D" parent="."]
position = Vector2(26, 448)
points = PackedVector2Array(22, -37, -18, -37, -18, 57, 211, 57, 211, -37, 172, -37)
width = 1.0

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(26, 60)
points = PackedVector2Array(22, -37, -18, -37, -18, 106, 211, 106, 211, -37, 172, -37)
width = 1.0

[connection signal="text_changed" from="Number_of_blocks_line_edit" to="." method="_on_number_of_blocks_line_edit_text_changed"]
[connection signal="text_submitted" from="Number_of_blocks_line_edit" to="." method="_on_number_of_blocks_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_max_height_line_edit" to="." method="_on_block_max_height_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_max_height_line_edit" to="." method="_on_block_max_height_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_min_height_line_edit" to="." method="_on_block_min_height_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_min_height_line_edit" to="." method="_on_block_min_height_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_max_depth_line_edit" to="." method="_on_block_max_depth_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_max_depth_line_edit" to="." method="_on_block_max_depth_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_min_depth_line_edit" to="." method="_on_block_min_depth_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_min_depth_line_edit" to="." method="_on_block_min_depth_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_max_width_line_edit" to="." method="_on_block_max_width_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_max_width_line_edit" to="." method="_on_block_max_width_line_edit_text_submitted"]
[connection signal="text_changed" from="Block_min_width_line_edit" to="." method="_on_block_min_width_line_edit_text_changed"]
[connection signal="text_submitted" from="Block_min_width_line_edit" to="." method="_on_block_min_width_line_edit_text_submitted"]
[connection signal="text_changed" from="Container_depth_line_edit" to="." method="_on_container_depth_line_edit_text_changed"]
[connection signal="text_submitted" from="Container_depth_line_edit" to="." method="_on_container_depth_line_edit_text_submitted"]
[connection signal="text_changed" from="Container_width_line_edit" to="." method="_on_container_width_line_edit_text_changed"]
[connection signal="text_submitted" from="Container_width_line_edit" to="." method="_on_container_width_line_edit_text_submitted"]
[connection signal="pressed" from="Generate_blocks_button" to="." method="_on_generate_blocks_button_pressed"]
[connection signal="pressed" from="Brute_force_algorithm_check_button" to="." method="_on_brute_force_algorithm_check_button_pressed"]
[connection signal="toggled" from="Brute_force_algorithm_check_button" to="." method="_on_brute_force_algorithm_check_button_toggled"]
[connection signal="pressed" from="Genetic_algorithm_check_button" to="." method="_on_genetic_algorithm_check_button_pressed"]
[connection signal="toggled" from="Genetic_algorithm_check_button" to="." method="_on_genetic_algorithm_check_button_toggled"]
[connection signal="toggled" from="Animation_check_button" to="." method="_on_animation_check_button_toggled"]
[connection signal="pressed" from="Calculate_best_block_order_button" to="." method="_on_calculate_best_block_order_button_pressed"]
[connection signal="pressed" from="a_2D_button" to="." method="_on_a_2d_button_pressed"]
[connection signal="pressed" from="a_3D_button" to="." method="_on_a_3d_button_pressed"]
